# TAR

./: .gitignore  .gitmodules  README.md  run.sh
Practica 2/: Dockerfile  run.sh
Practica 2/ros2_ws/src/maze_pkg/: setup.py  svg_to_maze.py
Practica 2/ros2_ws/src/p3_pkg/: package.xml
Practica 2/ros2_ws/src/p3_pkg/p3_pkg/: aparcamiento.py  movimiento.py  repetir_mov.py
Practica 3/: README.md  run.sh
Practica 3/Parte_1/launch/: worlds.launch.py
Practica 3/Parte_1/models/obstacles/: model.sdf
Practica 3/Parte_1/worlds/: obstacles.world
Practica 3/Parte_1/yahboomcar_description/: setup.py
Practica 3/Parte_1/yahboomcar_description/launch/: description_launch.py  display_launch.py  gazebo_launch.py
Practica 3/Parte_1/yahboomcar_description/urdf/: MicroROS.urdf  MicroROS_robot1.urdf  MicroROS_robot2.urdf  yahboomcar_robot2.urdf
Practica 3/Parte_1/yahboomcar_nav/: setup.py
Practica 3/Parte_1/yahboomcar_nav/launch/: cartographer_launch.py  navigation_dwb_app_launch.xml  navigation_dwb_launch.py
Practica 3/Parte_1/yahboomcar_nav/maps/: test1219.yaml  testa.pgm  testa.yaml  yahboom_map.pgm
Practica 3/Parte_1/yahboomcar_nav/params/: dwb_nav_params.yaml
Practica 3/Parte_1/yahboomcar_nav/rviz/: multi_nav.rviz
ros2_ws/: compilar.sh
ros2_ws/src/maze_pkg/: package.xml  setup.py  svg_to_maze.py  svg_to_world.py
ros2_ws/src/maze_pkg/launch/: maze_3.launch.py
ros2_ws/src/maze_pkg/maze_pkg/: res_maze.py
ros2_ws/src/maze_pkg/worlds/: maze_3.world
ros2_ws/src/p3_pkg/: setup.py
ros2_ws/src/p3_pkg/p3_pkg/: dibuja_mov.py  movimiento.py  repetir_mov.py
(+3 files in other folders)
